--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "glob": "^7.1.6",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.7",
+    "path": "^0.12.7",
     "socket.io": "^3.0.4"
   }
 }
