test: stage 2 testing

--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.11.7",
     "path": "^0.12.7",
+    "shortid": "^2.2.16",
     "socket.io": "^3.0.4"
   }
 }
