--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "cookie-parser": "^1.4.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "glob": "^7.1.6",
@@ -12,6 +13,7 @@
     "mongoose": "^5.11.7",
     "path": "^0.12.7",
     "shortid": "^2.2.16",
-    "socket.io": "^3.0.4"
+    "socket.io": "^3.0.4",
+    "web-push": "^3.4.4"
   }
 }
