test: change default 500m to 5000m

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@turf/turf": "^5.1.6",
     "axios": "^0.21.0",
     "babel-eslint": "^10.1.0",
     "better-docs": "^2.3.2",
     "dotenv": "^8.2.0",
     "emoji-mart": "^3.0.0",
     "formik": "^2.2.6",
+    "haversine-distance": "^1.2.1",
     "husky": "^4.3.6",
     "jsdoc": "^3.6.6",
     "lint-staged": "^10.5.3",
