--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fcm-node": "^1.5.2",
     "fcm-push": "^1.1.3",
     "glob": "^7.1.6",
     "method-override": "^3.0.0",
